--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2078,15 +2078,15 @@ input, select, textarea {
 			}
 
 		.icon.style1 {
-			color: #00ffcc;
+			color: #3F5CAF;
 		}
 
 		.icon.style2 {
-			color: #00f0ff;
+			color: #3F5CAF;
 		}
 
 		.icon.style3 {
-			color: #76ddff;
+			color: #3F5CAF;
 		}
 
 /* Image */
@@ -2817,7 +2817,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
+			background-color: #3F5CAF;
 			color: #c8ece9;
 		}
 
@@ -3351,7 +3351,7 @@ input, select, textarea {
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
+		background: #3F5CAF;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
